--- a/src/Presentation/Nop.Web/Properties/launchSettings.json
+++ b/src/Presentation/Nop.Web/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/Nop.Web",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:15536/",
       "sslPort": 0
@@ -22,6 +26,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:55390"
+    },
+    "iis": {
+      "commandName": "IIS",
+      "launchUrl": "http://localhost/yemsouq"
     }
   }
 }
